--- a/mm-01/style.css
+++ b/mm-01/style.css
@@ -46,14 +46,18 @@ h1{
     padding: 10px;
 }
 
-.wrapper{
+#wrapper{
     display: block;
     background-color: #cccccc;
     margin: 0 auto;
     width: 60%;
     padding: 20px;
+    min-height: 100%;
     border-right: 3px dashed whitesmoke;
     border-left: 3px dashed whitesmoke;
+}
+#wrapper.hidden{
+    display: none;
 }
 
 #system, #iterations{
